<!--
File contributors: Katie Arsenault, Deniz Kaptan
-->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Otrio</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="circle00Peg">circle 00 peg</string>
    <string name="circle00Medium">circle 00 medium</string>
    <string name="circle00Big">circle 00 big</string>

    <string name="circle01Peg">circle 01 peg</string>
    <string name="circle01Medium">circle 01 medium</string>
    <string name="circle01Big">circle 01 big</string>

    <string name="circle02Peg">circle 02 peg</string>
    <string name="circle02Medium">circle 02 medium</string>
    <string name="circle02Big">circle 02 big</string>

    <string name="circle10Peg">circle 10 peg</string>
    <string name="circle10Medium">circle 10 medium</string>
    <string name="circle10Big">circle 10 big</string>

    <string name="circle11Peg">circle 11 peg</string>
    <string name="circle11Medium">circle 11 medium</string>
    <string name="circle11Big">circle 11 big</string>

    <string name="circle12Peg">circle 12 peg</string>
    <string name="circle12Medium">circle 12 medium</string>
    <string name="circle12Big">circle 12 big</string>

    <string name="circle20Peg">circle 20 peg</string>
    <string name="circle20Medium">circle 20 medium</string>
    <string name="circle20Big">circle 20 big</string>

    <string name="circle21Peg">circle 21 peg</string>
    <string name="circle21Medium">circle 21 medium</string>
    <string name="circle21Big">circle 21 big</string>

    <string name="circle22Peg">circle 22 peg</string>
    <string name="circle22Medium">circle 22 medium</string>
    <string name="circle22Big">circle 22 big</string>

    <string name="playerPeg1">Player peg 1</string>
    <string name="playerPeg2">Player peg 2</string>
    <string name="playerPeg3">Player peg 3</string>

    <string name="playerMed1">Player medium 1</string>
    <string name="playerMed2">Player medium 2</string>
    <string name="playerMed3">Player medium 3</string>

    <string name="playerBig1">Player big 1</string>
    <string name="playerBig2">Player big 2</string>
    <string name="playerBig3">Player big 3</string>

    <string name="wins">Wins</string>
    <string name="turn_for">Turn:</string>
    <string name="picked">Picked:</string>
    <string name="remain">remain:</string>
    <string name="_0">0</string>
    <string name="remain1">remain:</string>
    <string name="_m0">0</string>
    <string name="remain2">remain:</string>
    <string name="_b0">0</string>
    <string name="peg">Peg</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <string name="reset">Reset</string>
    <string name="instructions">Instructions</string>
    <string name="home">Home</string>
    <string name="otrio">Otrio</string>
    <string name="greetings">Greetings!</string>
    <string name="play">Play</string>
    <string name="instructionsMain">Instructions</string>
    <string name="settings">Settings</string>
    <string name="single_player">Single Player</string>
    <string name="two_player">2 Players</string>
    <string name="three_player">3 Players</string>
    <string name="four_player">4 Players</string>
    <string name="music">Music         </string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="dark_mode">Dark Mode  </string>
    <string name="onmode">On</string>
    <string name="offmode">Off</string>
    <string name="resetWinsSetting">Reset Wins</string>
    <string name="player_1_wins">Player 1 Wins:</string>
    <string name="player_2_wins">Player 2 Wins:</string>
    <string name="how_to_play">How to Play</string>
    <string name="choosing_the_number_of_players">Choosing the Number of Players</string>
    <string name="choose_players_dialogue">When users choose to play the game, they will first be prompted to choose the number of players. A game can be played either single player, or multiplayer. In a single player game, the user plays against a CPU. In a multiplayer game, users can have between 2–4 people playing on a single device.</string>
    <string name="playing_the_game">Playing the Game</string>
    <string name="playing_game_dialogue">Each player is assigned a color. Player one plays first, then gameplay will cycle through all of the players. Players take turns placing their pieces, one per turn, into the center area.</string>
    <string name="rules_for_playing_pieces">Rules for Playing Pieces</string>
    <string name="rule_1">• Select the piece you would like to play. There are three different sized pieces that can be played.</string>
    <string name="rule_2">• Select the place on the board where you would like to play the piece</string>
    <string name="rule_3">• If the piece can be played, the piece will appear on the board, and it will change to the next player\'s turn</string>
    <string name="rule_4">• Keep placing pieces until someone gets an Otrio!</string>
    <string name="winning">Winning</string>
    <string name="win_1">There are three ways to win the game. The first way of winning is to get three pieces of the same size in a row either vertically, horizontally, or diagonally. In the image below, the red player wins with three big pieces in a row diagonally.</string>
    <string name="win_2">The second way of winning is to get all three of your pieces, one of each size, in the same location on the board. In the image below, red wins by filling up the middle left spot on the board.</string>
    <string name="win_3">The third way of winning to get three pieces of ascending or descending size in a row, either vertically, horizontally, or diagonally. In the image below, red player wins by having three pieces of ascending size horizontally across the top row.</string>
    <string name="play_game">Play Game</string>
    <string name="choose_number_of_players_screen">Choose number of players screen</string>
    <string name="player_pieces_image">player pieces image</string>
    <string name="same_piece_win_image">same piece win image</string>
    <string name="same_space_win_image">same space win image</string>
    <string name="ascending_or_descending_win_image">ascending or descending win image</string>
    <string name="additional_information">Additional Information</string>
    <string name="buttons_explanation">The bottom of the page displays additional buttons:</string>
    <string name="additional_buttons_on_the_bottom_of_the_page_image">Additional buttons on the bottom of the page image</string>
    <string name="button_1_explanation">• The Home button on the far left will bring the user back to the home page.</string>
    <string name="button_2_explanation">• Next is the Reset button, which will reset the board and pieces if the user so desires.</string>
    <string name="button_3_explanation">• The next button is the Wins button, which displays how many wins each player has.</string>
    <string name="button_4_explanation">• Finally, the Help button will bring the user back to this instructions page, where they can review the rules of the game.</string>
    <string name="player1" tools:ignore="Typos">Player1</string>

    <string name="home_button_text">Home</string>
    <string name="reset_button_text">Reset</string>
    <string name="wins_button_text">Wins</string>
    <string name="help_button_text">Help</string>
</resources>